--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               class="main-btn"
               target="_blank"
             >
-              <span class="btn-text">Download CV</span>
+              <span class="btn-text">Download Resume</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
           </div>
@@ -82,7 +82,7 @@
                 class="main-btn"
                 target="_blank"
               >
-                <span class="btn-text">Download CV</span>
+                <span class="btn-text">Download Resume</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
             </div>
