--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
               </div>
             </a>
             <a
-              href="https://github.com/prdmn-yadav"
+              href="https://github.com/prdmn-yadav/Online_Food_Oredering_Website"
               target="_blank"
             >
               <div class="blog">
