--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
             </h2>
           </div>
           <div class="blogs">
-            <a href="https://github.com/prdmn-yadav" target="_blank">
+            <a href="https://github.com/prdmn-yadav/Identification-of-skin-disease" target="_blank">
               <div class="blog">
                 <img src="Image/Projects/skin_expert.png" alt="" />
                 <div class="blog-text">
-                  <h4>Skin Expert</h4>
+                  <h4> Identification of Skin disease</h4>
                   <p>
                     ML model classifies skin diseases using transfer learning.
                     Interface takes image input, predicts disease, provides
@@ -406,7 +406,7 @@
                 </div>
               </div>
             </a>
-            <a href="https://github.com/prdmn-yadav" target="_blank">
+            <a href="https://github.com/prdmn-yadav/Code-Editor" target="_blank">
               <div class="blog">
                 <img src="Image/Projects/online_code_editor.png" alt="" />
                 <div class="blog-text">
@@ -434,7 +434,7 @@
               </div>
             </a>
             <a
-              href="https://github.com/prdmn-yadav/Online_Food_Oredering_Website"
+              href="https://prdmn-yadav.github.io/foodOrdering/"
               target="_blank"
             >
               <div class="blog">
