--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </p>
           <div class="btn-con">
             <a
-              href="https://drive.google.com/file/d/1JHPZvBnqFTak1IUWUs4P8TNRvhVrp74g/view?usp=sharing"
+              href="https://drive.google.com/file/d/1SDJUkA-13rXipscEHWZ3jXJNQqHEfNT5/view?usp=sharing"
               class="main-btn"
               target="_blank"
             >
@@ -78,7 +78,7 @@
             </p>
             <div class="btn-con">
               <a
-                href="https://drive.google.com/file/d/1JHPZvBnqFTak1IUWUs4P8TNRvhVrp74g/view?usp=sharing"
+                href="https://drive.google.com/file/d/1SDJUkA-13rXipscEHWZ3jXJNQqHEfNT5/view?usp=sharing"
                 class="main-btn"
                 target="_blank"
               >
@@ -364,7 +364,7 @@
             </h2>
           </div>
           <div class="blogs">
-            <a href="https://github.com/prdmn-yadav/Identification-of-skin-disease" target="_blank">
+            <a href="http://skinexpert.pythonanywhere.com/" target="_blank">
               <div class="blog">
                 <img src="Image/Projects/skin_expert.png" alt="" />
                 <div class="blog-text">
